--- a/app/styles/common/header.scss
+++ b/app/styles/common/header.scss
@@ -3,10 +3,32 @@
 header {
   border-bottom: 1px #e9f1f2 solid;
   background: #FFF;
+  line-height: 40px;
+  padding-top: 5px;
 
   a.logo {
     color: $primary-color;
     font-size: 24px;
     font-weight: 600;
+    padding-left: 16px;
+    &:before {
+      content: '';
+      width: 22px;
+      height: 35px;
+      position: absolute;
+      left: 0;
+      top: 3px;
+    }
+  }
+
+  li {
+    padding-right: 25px;
+    line-height: 35px;
+  }
+
+  span {
+    opacity: 0.6;
+    font-weight: bold;
+    padding-right: 10px;
   }
 }
