--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -1,8 +1,20 @@
 <header>
   <div class="container">
-    <a href class="logo">Rooms</a>
-    <ul>
-      <li><a href>Login</a></li>
-    </ul>
+    <div class="row">
+      <div class="col-sm-2">
+        <a href class="logo">Rooms</a>
+      </div>
+      <div class="col-sm-6">
+        <ul class="list-inline">
+          <li><a href>Find a room</a></li>
+          <li><a href>My bookings</a></li>
+          <li><a href>My account</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-4 text-right">
+        <span>Menthena</span>
+        <a href>Logout</a>
+      </div>
+    </div>
   </div>
 </header>
