--- a/client/app/styles/_variables.scss
+++ b/client/app/styles/_variables.scss
@@ -3,3 +3,4 @@ $text-color: #506a78;
 $input-color: #e1eef4;
 $input-border: #9fa9ac;
 $dark-grey: #506a78;
+$light-text-color: lighten($text-color, 30);
