--- a/client/app/styles/floors/floor.scss
+++ b/client/app/styles/floors/floor.scss
@@ -6,6 +6,12 @@
   background-color: #FFF;
   width: 100%;
   padding: 8px;
+  &.active-droppable {
+    background: lighten($light-text-color, 20);
+  }
+  &.active-dropping {
+    background: lighten($light-text-color, 10);
+  }
 }
 
 h1 {
