--- a/client/app/styles/base.scss
+++ b/client/app/styles/base.scss
@@ -15,6 +15,11 @@ a {
     color: darken($primary-color, 10%);
     text-decoration: none;
   }
+  &:active, &:visited, &:focus {
+    color: $primary-color;
+    text-decoration: none;
+    outline: none;
+  }
 }
 
 @include sprite('header a.logo:before');
