--- a/client/app/styles/floors/room.scss
+++ b/client/app/styles/floors/room.scss
@@ -1,7 +1,7 @@
 @import '../_variables';
 @import '../mixins';
 
-.room-wrapper {
+.wrapper {
   position: absolute;
   display: inline-block;
 }
@@ -12,7 +12,10 @@
   padding: 8px 10px;
   border-radius: 2px;
   background-color: $primary-color;
-  height: 55px;
+  width: 100%;
+  height: 100%;
+  min-height: 55px;
+  overflow: hidden;
   position: absolute;
   color: #FFF;
   display: inline-block;
