--- a/client/app/styles/form/button.scss
+++ b/client/app/styles/form/button.scss
@@ -17,7 +17,7 @@ input[type="checkbox"] {
   }
 
   &:checked + label i:before {
-    font: normal normal normal 14px/1 FontAwesome;
+    @include fontAwesome();
     content: '\f00c';
     display: block;
     font-size: 11px;
