--- a/client/app/styles/form/select-menu.scss
+++ b/client/app/styles/form/select-menu.scss
@@ -7,7 +7,7 @@
     padding: 5px 7px;
   }
   &:before {
-    font: normal normal normal 14px/1 FontAwesome;
+    @include fontAwesome();
     content: '\f078';
     display: block;
     position: absolute;
