--- a/client/app/styles/mixins.scss
+++ b/client/app/styles/mixins.scss
@@ -14,6 +14,18 @@
   box-shadow: (0 1px 2px rgba(187, 214, 216, 0.4), 0 1px 1px rgba(187, 214, 216, 0.9));
 }
 
+@mixin dragShadow() {
+  box-shadow: (0 1px 10px rgba(187, 214, 216, 0.8), 0 2px 2px rgba(187, 214, 216, 0.9));
+}
+
+@mixin placeholderShadow() {
+  box-shadow: (0 0px 2px rgba(203, 222, 232, 0.6), 0 1px 1px rgba(203, 222, 232, 0.9));
+}
+
+@mixin fontAwesome() {
+  font: normal normal normal 14px/1 FontAwesome;
+}
+
 @mixin baseInput() {
   @include boxShadow();
   border-radius: 2px;
