Progressing on the app

--- a/client/app/styles/_variables.scss
+++ b/client/app/styles/_variables.scss
@@ -3,4 +3,5 @@ $text-color: #506a78;
 $input-color: #e1eef4;
 $input-border: #9fa9ac;
 $dark-grey: #506a78;
+$background-color: #f9fbfc;
 $light-text-color: lighten($text-color, 30);
