--- a/client/app/styles/floors/room.scss
+++ b/client/app/styles/floors/room.scss
@@ -4,6 +4,16 @@
 .wrapper {
   position: absolute;
   display: inline-block;
+  &.reserved {
+    .room {
+      opacity: 0.4;
+      cursor: default;
+      background-color: $text-color;
+      &:hover {
+        background-color: $text-color;
+      }
+    }
+  }
 }
 
 .room {
@@ -22,6 +32,13 @@
   cursor: pointer;
   &:hover {
     background-color: darken($primary-color, 5);
+  }
+  .fa-pencil {
+    padding-top: 3px;
+  }
+  .reserved {
+    opacity: 0.7;
+    font-size: 12px;
   }
 }
 
