--- a/client/app/styles/mixins.scss
+++ b/client/app/styles/mixins.scss
@@ -18,8 +18,16 @@
   box-shadow: (0 1px 10px rgba(187, 214, 216, 0.8), 0 2px 2px rgba(187, 214, 216, 0.9));
 }
 
+@mixin modalBoxShadow() {
+  box-shadow: (0 1px 8px rgba(128, 95, 70, 0.2), 0 2px 2px rgba(12, 95, 70, 0.3));
+}
+
 @mixin placeholderShadow() {
   box-shadow: (0 0px 2px rgba(203, 222, 232, 0.6), 0 1px 1px rgba(203, 222, 232, 0.9));
+}
+
+@mixin noShadow() {
+  box-shadow: none;
 }
 
 @mixin fontAwesome() {
@@ -46,8 +54,8 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFF', endColorstr='#f4f8f8',GradientType=0 ); /* IE6-9 */
 }
 
-@mixin transition($type) {
-  transition: $type 0.15s;
+@mixin transition($type, $duration: 0.15s) {
+  transition: $type $duration;
 }
 
 @mixin pulse() {
