--- a/client/app/styles/filter.scss
+++ b/client/app/styles/filter.scss
@@ -19,6 +19,10 @@
     margin-top: 9px;
   }
 
+  .time {
+    width: 130px;
+  }
+
   input {
     @include baseInput();
     padding: 5px 7px;
@@ -66,6 +70,9 @@ label {
   color: $text-color;
 }
 
+.ui-menu .ui-menu-item {
+  font-size: 15px;
+}
 
 .input-group {
   max-width: 150px;
