--- a/client/app/styles/common/overlay.scss
+++ b/client/app/styles/common/overlay.scss
@@ -1,16 +1,18 @@
 @import '../_variables';
 @import '../mixins';
 
-.overlay {
-  @include transition(opacity, 0.4s);
-  // background-color: #088;
-  background-color: #FFF;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  z-index: 10;
-  opacity: 0;
-  &.active {
-    opacity: 0.8;
+@media (max-width: 768px) {
+  .overlay {
+    @include transition(opacity, 0.4s);
+    // background-color: #088;
+    background-color: #FFF;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    opacity: 0;
+    &.active {
+      opacity: 0.8;
+    }
   }
 }
