--- a/client/app/styles/edit-element.scss
+++ b/client/app/styles/edit-element.scss
@@ -7,9 +7,12 @@
 
 .edit-element {
   @include modalBoxShadow();
-  @include transition(opacity, 0.1s);
+  @include transition(all, 0.1s);
+  @include transform(scale(0.3));
+  margin: -40px 0 0 -40px;
   pointer-events: all;
   position: absolute;
+  opacity: 0;
   top: 0;
   left: 0;
   width: 236px;
@@ -25,6 +28,8 @@
     opacity: 0;
   }
   &.active {
+    @include transform(scale(1));
+    opacity: 1;
     > * {
       opacity: 1;
     }
@@ -91,15 +96,22 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   edit-element {
-    .booking {
-      margin: auto;
-      position: relative;
-    }
+    // .booking {
+    //   margin: auto;
+    //   position: relative;
+    // }
     .wrapper {
+      z-index: 99;
+      position: fixed;
       width: 100% !important;
-      left: 0 !important;
+      left: calc(50% - 118px) !important;
+      right: 0 !important;
+      top: calc(50% - 98px);
+      .edit-element {
+        margin: 0 0 0 0;
+      }
     }
   }
 }
