--- a/client/app/styles/reservation-modal.scss
+++ b/client/app/styles/reservation-modal.scss
@@ -3,16 +3,19 @@
 
 .wrapper {
   position: absolute;
+  margin: -60px 0 0 -60px;
 }
 
 .booking {
   @include modalBoxShadow();
-  @include transition(opacity, 0.1s);
+  @include transition(all, 0.1s);
+  @include transform(scale(0.3));
   position: absolute;
   top: 0;
   left: 0;
   width: 236px;
   height: 180px;
+  opacity: 0;
   background: $primary-color;
   color: #FFF;
   z-index: 2;
@@ -24,6 +27,8 @@
     opacity: 0;
   }
   &.active {
+    @include transform(scale(1));
+    opacity: 1;
     > * {
       opacity: 1;
     }
@@ -68,13 +73,14 @@
   }
 }
 
-@media (max-width: 600px) {
-  .booking {
-    margin: auto;
-    position: relative;
-  }
+@media (max-width: 768px) {
   .wrapper {
+    z-index: 99;
+    position: fixed;
     width: 100% !important;
-    left: 0 !important;
+    left: calc(50% - 118px) !important;
+    right: 0!important;
+    margin: 0 0 0 0;
+    top: calc(50% - 98px);
   }
 }
