Upgrading to Angular 2.0 Beta

--- a/client/app/styles/_variables.scss
+++ b/client/app/styles/_variables.scss
@@ -1,7 +1,9 @@
 $primary-color: #3ab791;
 $text-color: #506a78;
+$light-blue: #d1e7f2;
 $input-color: #e1eef4;
 $input-border: #9fa9ac;
 $dark-grey: #506a78;
 $background-color: #f9fbfc;
 $light-text-color: lighten($text-color, 30);
+$err-color: #e35050;
