Adding line as design tool

--- a/client/app/styles/_variables.scss
+++ b/client/app/styles/_variables.scss
@@ -7,3 +7,7 @@ $dark-grey: #506a78;
 $background-color: #f9fbfc;
 $light-text-color: lighten($text-color, 30);
 $err-color: #e35050;
+$light-border-color: #dbe7ed;
+$line-color: #dbe7ed;
+$icon-bg-color: lighten(#dbe7ed, 5);
+$icon-border-color: darken(#dbe7ed, 0);
