--- a/client/app/styles/floors/room.scss
+++ b/client/app/styles/floors/room.scss
@@ -16,7 +16,7 @@
   }
   &.not-match:not(.reserved) {
     .room {
-      opacity: 0.8;
+      opacity: 1;
     }
   }
   reservation-modal {
@@ -38,7 +38,7 @@
   width: 100%;
   height: 100%;
   min-height: 55px;
-  // overflow: hidden;
+  overflow: hidden;
   position: absolute;
   color: #FFF;
   display: inline-block;
