Working on Hybrid

--- a/client/app/styles/base.scss
+++ b/client/app/styles/base.scss
@@ -2,6 +2,7 @@
 @import '_variables.scss';
 @import 'common/tooltip.scss';
 @import 'common/icons.scss';
+@import 'ionic-override.scss';
 
 body {
   background: $background-color;
