--- a/client/app/styles/floors/icon.scss
+++ b/client/app/styles/floors/icon.scss
@@ -9,3 +9,11 @@
 .icon {
   // @include boxShadow();
 }
+
+// @media (max-width: 768px) {
+//   .icon {
+//     transform: scale(0.4);
+//     margin-left: -21px;
+//     margin-top: -19px;
+//   }
+// }
