--- a/client/app/styles/floors/placeholder.scss
+++ b/client/app/styles/floors/placeholder.scss
@@ -26,3 +26,14 @@
     color: $light-text-color;
   }
 }
+
+// @media (max-width: 768px) {
+//   .placeholder {
+//     text-align: center;
+//     min-height: auto;
+//     height: auto;
+//     font-size: 13px;
+//     line-height: 15px;
+//     padding: 3px;
+//   }
+// }
