--- a/client/app/styles/floors/room.scss
+++ b/client/app/styles/floors/room.scss
@@ -68,16 +68,17 @@ span, i {
   color: #FFF;
 }
 
-@media (max-width: 768px) {
-  reservation-modal {
-    position: absolute;
-  }
-  .room {
-    text-align: center;
-    min-height: auto;
-    height: auto;
-    span {
-      display: none;
-    }
-  }
-}
+// @media (max-width: 768px) {
+//   reservation-modal {
+//     position: absolute;
+//   }
+//   .room {
+//     max-width: 34px;
+//     text-align: center;
+//     min-height: auto;
+//     height: auto;
+//     span {
+//       display: none;
+//     }
+//   }
+// }
