--- a/client/app/styles/reservation-modal.scss
+++ b/client/app/styles/reservation-modal.scss
@@ -4,6 +4,11 @@
 reservation-modal .wrapper {
   position: absolute;
   margin: -60px 0 0 -60px;
+  display: none;
+}
+
+reservation-modal.active .wrapper {
+  display: block;
 }
 
 .reservation-modal .ui-timepicker-list {
