--- a/www/styles/reservation-modal.css
+++ b/www/styles/reservation-modal.css
@@ -19,7 +19,11 @@
 
 reservation-modal .wrapper {
   position: absolute;
-  margin: -60px 0 0 -60px; }
+  margin: -60px 0 0 -60px;
+  display: none; }
+
+reservation-modal.active .wrapper {
+  display: block; }
 
 .reservation-modal .ui-timepicker-list {
   border: none;
